# InterviewPilot

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  pyrightconfig.json
alembic/: env.py
alembic/versions/: 1730789fad6b_create_questions_table.py  d5c9b8669100_add_question_and_user_table.py  d5f20dea5290_add_notes_and_reviews_table.py
deploy/: Dockerfile  docker-compose.yml
docker/: Dockerfile
scripts/: clean.ps1  init_db.py
src/: __init__.py  main.py
src/api/v1/: router.py
src/api/v1/endpoints/: questions.py
src/core/: config.py  exceptions.py  security.py
src/db/: base.py  session.py
src/interview_pilot/: main.py
src/interview_pilot/api/: deps.py
src/interview_pilot/api/v1/: router.py
src/interview_pilot/core/: cache.py  config.py  exceptions.py  message_queue.py  security.py
src/interview_pilot/db/: models.py  session.py
src/interview_pilot/modules/auth/: models.py  repository.py  schemas.py  service.py
src/interview_pilot/modules/dashboard/: repository.py  schemas.py  service.py
src/interview_pilot/modules/notes/: models.py  (+3 more)
src/interview_pilot/realtime/: manager.py
src/interview_pilot/workers/: event_worker.py
src/modules/auth/: models.py
src/modules/notes/: crud.py  models.py  service.py
src/modules/questions/: __init__.py  crud.py  models.py  schemas.py  service.py
src/modules/reviews/: models.py  schemas.py  service.py
tests/: README.md  conftest.py  helpers.py  test_health.py  test_questions.py
tests/api/: test_auth_api.py  test_dashboard_api.py  test_health_api.py  test_notes_api.py  test_questions_api.py  test_reviews_api.py  test_websocket_api.py
tests/integration/: test_event_flow_integration.py
tests/unit/: test_auth.py  test_cache_queue_websocket.py  test_cache_unit.py  test_message_queue_unit.py  test_notes_reviews.py  test_questions.py  test_security_unit.py
(+15 files in other folders)
