[project]
name = "interview-pilot"
version = "0.1.0"
description = "FastAPI-based interview review system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0,<1.0.0",
    "alembic>=1.13.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "sqlalchemy>=2.0.30,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "httpx>=0.28.1",
    "starlette>=1.0.0",
    "pyjwt>=2.13.0",
    "pwdlib[argon2]>=0.3.0",
    "python-multipart>=0.0.29",
    "pydantic[email]>=2.13.4",
    "redis>=6.4.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interview_pilot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.coverage.run]
source = ["src"]
branch = true
